# firehose-sipper

./: README.md  __init__.py  pyproject.toml
firehose_sipper/: __init__.py
tests/: data.py  test_generator.py  test_object_sip.py
